# FastAPI-project

./: alembic.ini  database.db  pyproject.toml
fast_zero/: app.py
migrations/: env.py
migrations/versions/: e284fcdf3e07_create_users_table.py
tests/: test_app.py
